[gd_scene load_steps=12 format=3 uid="uid://dbaqm321odlwp"]

[ext_resource type="Script" path="res://scripts/temp_fx.gd" id="1_dssdj"]
[ext_resource type="Texture2D" uid="uid://ctwkgbvx0xuu2" path="res://assets/smear.png" id="2_ndo60"]
[ext_resource type="Texture2D" uid="uid://be236jk424obx" path="res://assets/slasheffect.png" id="3_6je1n"]

[sub_resource type="Gradient" id="Gradient_5gusc"]
offsets = PackedFloat32Array(0, 0.45082, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.83, 0.9915, 1, 0.54902, 0.26, 0.568333, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_einff"]
gradient = SubResource("Gradient_5gusc")
width = 16

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xqfad"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_einff")

[sub_resource type="Animation" id="Animation_cohu8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smear:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8tam4"]
resource_name = "slash"
length = 0.216668
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Slash:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Slash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.216667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_3bvon"]
resource_name = "smear1"
length = 0.200002
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smear:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Smear:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fr8l5"]
resource_name = "smear2"
length = 0.200002
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Smear:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Smear:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4sd1g"]
_data = {
"RESET": SubResource("Animation_cohu8"),
"slash": SubResource("Animation_8tam4"),
"smear1": SubResource("Animation_3bvon"),
"smear2": SubResource("Animation_fr8l5")
}

[node name="TempFX" type="Node2D"]
z_index = 5
script = ExtResource("1_dssdj")

[node name="Ghost" type="GPUParticles2D" parent="."]
position = Vector2(0, -16)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_xqfad")
lifetime = 0.2
one_shot = true
explosiveness = 0.25
interpolate = false
fract_delta = false

[node name="FreeTimer" type="Timer" parent="."]
one_shot = true

[node name="Smear" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
texture = ExtResource("2_ndo60")
hframes = 3
vframes = 2
frame = 3

[node name="Slash" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_6je1n")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4sd1g")
}

[connection signal="timeout" from="FreeTimer" to="." method="_on_free_timer_timeout"]
